--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+#Menu{;
+     position: fixed;
+ top: 0;
+ left: 0;
+}
+
+
+#clickstart{
+    margin-left: 55%;
+    margin-top: 65%;
+}
+
+
 video{;
 	 position: fixed;
  top: 0;
