--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
-
-#Menu{;
+#Menu{
      position: fixed;
      top: 0;
-     left: 0;}
+     left: 0;
+     width: 100%;
+     height: 100%;
+     }
 
 
 #clickstart{
-
      display: flex;
-      position: fixed ;
-     
-}
+     position: fixed;
+     width: 100%;
+     height: 100%
+     }
 
 video{
      display: flex;
-	 position: fixed;
+     position: fixed;
      top: 0;
      left: 0;
 }
-
