--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#Menu{
+#ImgMenu{
      position: fixed;
      top: 0;
      left: 0;
@@ -11,7 +11,7 @@
      display: flex;
      position: fixed;
      width: 100%;
-     height: 100%
+     height: 100%;
      }
 
 video{
@@ -19,4 +19,10 @@ video{
      position: fixed;
      top: 0;
      left: 0;
+}
+video#startvid{
+     position: fixed; right: 0; bottom: 0;
+     min-width: 100%; min-height: 100%;
+     width: auto; height: auto; z-index: -100;
+     background-size: cover;
 }
